force-app/main/default/objects/ADM_MatchingRuleItem__c/ADM_MatchingRuleItem__c.object-meta.xml
<CustomObject>
    <label>ADM MatchingRuleItem</label>
    <nameField>
        <label>ADM MatchingRuleItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADM MatchingRuleItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>