force-app/main/default/objects/ADM_MatchingRuleItem__c/fields/MatchBlankFields__c.field-meta.xml
<CustomField>
    <fullName>MatchBlankFields__c</fullName>
    <label>Match Blank Fields</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>