force-app/main/default/objects/ADM_MatchingRuleItem__c/fields/MatchingMethod__c.field-meta.xml
<CustomField>
    <fullName>MatchingMethod__c</fullName>
    <label>MatchingMethod</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
            </value>
            <value>
                <fullName>Fuzzy</fullName>
            </value>
            <value>
                <fullName>Phonetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>