force-app/main/default/objects/ADM_MatchingRuleItem__c/fields/MatchingRule__c.field-meta.xml
<CustomField>
    <fullName>MatchingRule__c</fullName>
    <label>MatchingRule</label>
    <referenceTo>ADM_MatchingRule__c</referenceTo>
    <relationshipLabel>ADM MatchingRuleItems</relationshipLabel>
    <relationshipName>ADM_MatchingRuleItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>