force-app/main/default/objects/ADM_MatchingRuleItem__c/validationRules/Weight_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Range</fullName>
    <active>true</active>
    <errorConditionFormula>Weight__c &lt; 0 || Weight__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Weight__c</errorDisplayField>
    <errorMessage>The weight must be between 0 and 100</errorMessage>
</ValidationRule>